--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "email": "lionext.studio@gmail.com",
         "url": "https://github.com/gestiran"
     },
-    "version": "1.0.1",
+    "version": "1.0.2",
     "unity": "2018.4",
     "description": "Reactive fields and extensions.",
     "keywords": [
@@ -20,7 +20,8 @@
         "url": "https://github.com/gestiran/TinyReactive"
     },
     "dependencies": {
-        "com.cysharp.unitask": "2.5.10"
+        "com.cysharp.unitask": "2.5.10",
+        "com.ges.tinyutilities": "1.0.15"
     },
     "publishConfig": {
         "registry": "https://package.openupm.com"
